[package]
name = "reefspect"
version = "0.1.0"
edition = "2024"

[profile.release-opt]
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1
strip = true

[dependencies]
axum = {version = "0.8", features = ["multipart"]}
axum-prometheus = "0.10"
chrono = "0.4"
clamav-async = "0.3.0"
config = {version = "0.15", features = ["toml", "yaml"]}
const-hex = "1"
crc-fast = "1"
digest = "0.10"
fmap = "0.8"
hyper = {version = "1.8", features = ["full"] }
infer = "0.19"
libc = "0.2"
md-5 = "0.10"
serde = {version = "1.0.228", features = ["derive"]}
sha2 = "0.10"
tempfile = "3"
tokio = {version = "1.49.0", features = ["full"]}
tokio-stream = "0.1"
tower-http = {version = "0.6", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
axum-test = "18"
serde_json = "1.0"
